--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
                 <div class="pointer"></div>
             </div>
         </section>
+        <section class="default light">
+            <div class="section-title">About us</div>
+            <div class="section-desc">Who we are?</div>
+            <div class="section-body">
+                ...
+            </div>
+            <section class="default dark">
+                <div class="section-title">Titulo de exemplo</div>
+                <div class="section-desc">Descricao bem legal</div>
+                <div class="section-body">
+                    ...
+                </div>
+
+        </section>
     </main>
     <footer>
 
