--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
                 <div class="section-body">
                     ...
                 </div>
-
+                
         </section>
+        <section class="default dark">
+            <div class="section-title">Titulo de exemplo</div>
+            <div class="section-desc">Descricao bem legal</div>
+            <div class="section-body">
+                ...
+            </div>
     </main>
     <footer>
 
