add todos os arquivos

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
                     <div class="slidearea">
                         <h1>Design is About<br><span>Communication</span></h1>
                         <h2>call us: +55 67 991950527</h2>
-                        <a href="#">GET IN TOUCH!</a>
+                        <a href="#" class="button">GET IN TOUCH!</a>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="slidearea">
                         <h1>Design is test<br><span>Communication</span></h1>
                         <h2>call us: +55 67 991950527</h2>
-                        <a href="#">GET IN TOUCH!</a>
+                        <a href="#" class="button">GET IN TOUCH!</a>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="slidearea">
                         <h1>Design is algo<br><span>Communication</span></h1>
                         <h2>call us: +55 67 991950527</h2>
-                        <a href="#">GET IN TOUCH!</a>
+                        <a href="#" class="button">GET IN TOUCH!</a>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,17 @@
             <div class="section-title">About us</div>
             <div class="section-desc">Who we are?</div>
             <div class="section-body">
-                ...
+                <div class="section-aboutus">
+                    <div class="section-aboutus--left">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non orci quis arcu feugiat fermentum. Sed quis risus ornare, ornare odio vitae, finibus ligula. Integer dictum lectus sed urna bibendum eleifend. Aliquam sed ullamcorper turpis, in cursus risus. In non nisl ut risus maximus vulputate sit amet eu massa. Proin lacinia nulla velit, et tincidunt nisl cursus ac. Fusce bibendum libero erat, non efficitur purus fermentum vitae. Cras a enim metus. Aenean felis turpis, sagittis et quam vitae, bibendum tincidunt nibh. Nam consequat pulvinar semper. Aenean pellentesque purus eu quam imperdiet congue. Duis eu magna enim. Suspendisse in purus bibendum, volutpat mauris quis, rutrum neque. Mauris iaculis est eget tortor imperdiet eleifend.</p>
+                        <br>
+                        <a href="#" class="button">Learn More</a>
+                    </div>
+                    <div class="section-aboutus--right">
+                       <img src="Assest/media/foto9.jpg"/>
+                    </div>
+
+                </div>
             </div>
             <section class="default dark">
                 <div class="section-title">Titulo de exemplo</div>
@@ -75,7 +85,7 @@
                 </div>
                 
         </section>
-        <section class="default dark">
+        <section class="default light">
             <div class="section-title">Titulo de exemplo</div>
             <div class="section-desc">Descricao bem legal</div>
             <div class="section-body">
