--- a/index.html
+++ b/index.html
@@ -78,19 +78,163 @@
                 </div>
             </div>
             <section class="default dark">
-                <div class="section-title">Titulo de exemplo</div>
-                <div class="section-desc">Descricao bem legal</div>
+                <div class="section-title">Services</div>
+                <div class="section-desc">Services that we provide</div>
                 <div class="section-body">
-                    ...
+                    <div class="section-services">
+                        <div class="section-service">
+                            <img src="Assest/imagens/medalha.png" />
+                            <H4>High Quality Design</H4>
+                            <p>Donec tincidunt cursus</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="Assest/imagens/estrela.png" />
+                            <H4>Modern Design</H4>
+                            <p>Donec tincidunt cursus, morbi ex felis</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="Assest/imagens/relogio.png" />
+                            <H4>HRegular Updates</H4>
+                            <p>Donec tincidunt cursus</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="Assest/imagens/balao.png" />
+                            <H4>Fast and free support</H4>
+                            <p>Donec tincidunt cursus, morbi ex felis</p>
+                        </div>
+                    </div>
                 </div>
                 
         </section>
         <section class="default light">
-            <div class="section-title">Titulo de exemplo</div>
-            <div class="section-desc">Descricao bem legal</div>
+            <div class="section-title">Our Projects</div>
+            <div class="section-desc">What we create</div>
             <div class="section-body">
-                ...
+                <div class="section-projects">
+                    <div class="section-projects--filters">
+                        <ul>
+                            <li>All</li>
+                            <li class="active">Photos</li>
+                            <li>Branding</li>
+                            <li>Adverts</li>
+                            <li>Development</li>
+                            <li>Misc</li>
+                        </ul>
+                    </div>
+                    <div class="section-projects--photos">
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto1.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto2.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto3.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto4.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto5.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto6.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto7.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto8.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto9.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto1.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto2.jpg" />
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Phasellus porta turpis </p>
+                                </div>
+                                <img src="Assest/media/foto3.jpg" />
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="button"> More projects</a>
+                </div>                
             </div>
+        </section>
     </main>
     <footer>
 
