--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" type="text/css" href="Assest/Css/estilo.css">
     <title>Away</title>
 </head>
@@ -234,7 +233,153 @@
                     <a href="#" class="button"> More projects</a>
                 </div>                
             </div>
+        </section>        
+        <section class="default dark bg-team">
+            <div class="section-team-area">
+                <div class="section-title">Our Team</div>
+                <div class="section-desc">Our Co-Workers</div>
+                <div class="section-body">
+                    <div class="section-team">
+                        <div class="sliders">
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="section-team--avatar" src="Assest/media/homem1.png"/>
+                                    <div class="section-team--name"> Mike Chiller</div>
+                                    <div class="section-team--role">Creative Head</div>
+                                    <div class="section-team--social">
+                                        <a href="#"><img src="Assest/imagens/facebook.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/googleplus.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/linkedin.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/pinterest.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/twitter.png"/></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="section-team--avatar" src="Assest/media/mulher1.png"/>
+                                    <div class="section-team--name"> Jane Doou</div>
+                                    <div class="section-team--role">Master Mind</div>
+                                    <div class="section-team--social">
+                                        <a href="#"><img src="Assest/imagens/facebook.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/googleplus.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/linkedin.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/pinterest.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/twitter.png"/></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="section-team--avatar" src="Assest/media/mulher2.png"/>
+                                    <div class="section-team--name"> Anna Jhond</div>
+                                    <div class="section-team--role">Technical Lead</div>
+                                    <div class="section-team--social">
+                                        <a href="#"><img src="Assest/imagens/facebook.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/googleplus.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/linkedin.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/pinterest.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/twitter.png"/></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="section-team--avatar" src="Assest/media/mulher2.png"/>
+                                    <div class="section-team--name"> Anna Jhond</div>
+                                    <div class="section-team--role">Technical Lead</div>
+                                    <div class="section-team--social">
+                                        <a href="#"><img src="Assest/imagens/facebook.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/googleplus.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/linkedin.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/pinterest.png"/></a>
+                                        <a href="#"><img src="Assest/imagens/twitter.png"/></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
         </section>
+        <section class="default light">
+            <div class="section-title">Happy Clients</div>
+            <div class="section-desc">Client Reviews</div>
+            <div class="section-body">
+               <div class="section-clients">
+                   <div class="section-client">
+                        <img class="section-client--avatar" src="Assest/media/homem2.png" />
+                        <div class="section-client--name"> John Doe</div>
+                        <div class="section-client--role">Head of PR Departament</div>
+                        <img class="section-client--aspas" src="Assest/imagens/quote.png" />
+                        <p>Nullam porta tempus suscipit. Morbi sollicitudin finibus nulla sed aliquet. Fusce odio arcu, tincidunt sit amet ipsum eu, tempus ultrices sem. Nullam tristique, eros eget imperdiet facilisis, mauris sem rhoncus elit,t elementum lorem elit eget nisl. Aliquam fringilla ante id risus efficitur, quis blandit sapien mollis.</p>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="default white">            
+            <div class="section-body empresa">
+                <div class="section-img-area">
+                    <img class="section-img--empresa" src="Assest/media/empresa1.png"/>
+                    <img class="section-img--empresa" src="Assest/media/empresa2.png"/>
+                    <img class="section-img--empresa" src="Assest/media/empresa3.png"/>
+                    <img class="section-img--empresa" src="Assest/media/empresa4.png"/>
+                    <img class="section-img--empresa" src="Assest/media/empresa5.png"/>
+                    <img class="section-img--empresa" src="Assest/media/empresa6.png"/>
+                </div>
+            </div>
+        </section>
+
+        <section class="default light">
+            <div class="section-title">Price</div>
+            <div class="section-desc">Pricing table</div>
+            <div class="section-body">
+                <div class="section-price-area">
+                    <div class="sliders">
+                        <div class="slide">
+                            <div class="slidearea">
+                               ...
+                                <a href="#" class="button">choose</a>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="sliders">
+                            <div class="slide">
+                                <div class="slidearea">
+                                    ...
+                                    <a href="#" class="button">choose</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sliders">
+                            <div class="slide">
+                                <div class="slidearea">
+                                   ...
+                                    <a href="#" class="button">choose</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sliders">
+                            <div class="slide">
+                                <div class="slidearea">
+                                    ...
+                                    <a href="#" class="button">choose</a>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        
+
     </main>
     <footer>
 
