Quase finalizando o trabalho

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <br>
                         <a href="#" class="button">Learn More</a>
                     </div>
-                    <div class="section-aboutus--right">
+                    <div class="section-aboutus--right espaco">
                        <img src="Assest/media/foto9.jpg"/>
                     </div>
 
@@ -347,39 +347,232 @@
                     <div class="sliders">
                         <div class="slide">
                             <div class="slidearea">
-                               ...
-                                <a href="#" class="button">choose</a>
+                                <div class="section-client">
+                                    <h5>Express</h5>
+                                    <div class="section-title">$9.99</div>
+                                    <h6>/month</h6>                    
+                                    <p>Tranking issues</p>
+                                    <p>-</p>
+                                    <p>Add bugs through email</p>
+                                    <p>-</p>
+                                    <p>Notifications</p>
+                                    <p>-</p>
+                                    <p>Time tracking</p>
+                                    <p>-</p>
+                                    <p>Custom views</p>
+                                    <a href="#" class="button">choose</a>
+                                </div>                                
                             </div>
                         </div>
                     </div>
                         <div class="sliders">
                             <div class="slide">
                                 <div class="slidearea">
-                                    ...
-                                    <a href="#" class="button">choose</a>
+                                    <div class="section-client">
+                                        <h5>Standart</h5>
+                                        <div class="section-title">$14.99</div>
+                                        <h6>/month</h6>                    
+                                        <p>Tranking issues</p>
+                                        <p>-</p>
+                                        <p>Add bugs through email</p>
+                                        <p>-</p>
+                                        <p>Notifications</p>
+                                        <p>-</p>
+                                        <p>Time tracking</p>
+                                        <p>-</p>
+                                        <p>Custom views</p>
+                                        <a href="#" class="button">choose</a>
+                                    </div>        
                                 </div>
                             </div>
                         </div>
                         <div class="sliders">
                             <div class="slide">
                                 <div class="slidearea">
-                                   ...
-                                    <a href="#" class="button">choose</a>
+                                    <div class="section-client">
+                                        <h5>luxe</h5>
+                                        <div class="section-title">$19.99</div>
+                                        <h6>/month</h6>                    
+                                        <p>Tranking issues</p>
+                                        <p>-</p>
+                                        <p>Add bugs through email</p>
+                                        <p>-</p>
+                                        <p>Notifications</p>
+                                        <p>-</p>
+                                        <p>Time tracking</p>
+                                        <p>-</p>
+                                        <p>Custom views</p>
+                                        <a href="#" class="button">choose</a>
+                                    </div>                       
                                 </div>
                             </div>
                         </div>
                         <div class="sliders">
                             <div class="slide">
                                 <div class="slidearea">
-                                    ...
-                                    <a href="#" class="button">choose</a>
+                                    <div class="section-client">
+                                        <h5>Premium</h5>
+                                        <div class="section-title">$24.99</div>
+                                        <h6>/month</h6>                    
+                                        <p>Tranking issues</p>
+                                        <p>-</p>
+                                        <p>Add bugs through email</p>
+                                        <p>-</p>
+                                        <p>Notifications</p>
+                                        <p>-</p>
+                                        <p>Time tracking</p>
+                                        <p>-</p>
+                                        <p>Custom views</p>
+                                        <a href="#" class="button">choose</a>
+                                    </div>        
                                 </div>
                             </div>
                         </div>
                 </div>
+            </div>        
+        </section>
+        <section class="default light premium">
+            <div class="section-title">Premium</div>
+            <div class="section-desc">Even More Features Available</div>
+            <div class="section-body">
+                <div class="section-premium">
+                    <div class="sliders" style="margin-left:0;">
+                        <div class="slide">
+                            <div class="slidearea">
+                                <div class="section-premium--left">
+                                    <img src="Assest/media/livros.png" />
+                                </div>
+                                <div class="section-premium--right">
+                                        <div class="section-premium--item">
+                                            <img src="Assest/imagens/check.png" />
+                                            <div>
+                                                <h4>FIRST FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.<br/>
+                                                -- FEATURE ONE<br/>
+                                                -- FEATURE TWO<br/>
+                                                -- FEATURE THREE
+                                            </div>
+                                        </div>
+                                        <div class="section-premium--item">
+                                            <img src="Assest/imagens/check.png" />
+                                            <div>
+                                                <h4>SECOND FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
+                                            </div>
+                                        </div>
+                                        <div class="section-premium--item">
+                                            <img src="Assest/imagens/check.png" />
+                                            <div>
+                                                <h4>THIRD FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
+                                            </div>
+                                        </div>
+                                </div>
+                            </div>
+                        </div><div class="slide">
+                            <div class="slidearea">
+                                ...
+                            </div>
+                        </div><div class="slide">
+                            <div class="slidearea">
+                                ...
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
             </div>
-        
-
+        </section>    
+        <section class="default dark">
+            <div class="section-title">Some Facts</div>
+            <div class="section-desc">About our work</div>
+            <div class="section-body">
+                <div class="section-facts">
+                    <div class="section-fact">
+                        <h3>1000</h3>
+                        <div class="section-fact-line"></div>
+                        <h4>Design Projects Released</h4>
+                        <p>Donec tincidunt cursus</p>
+                    </div>
+                    <div class="section-fact">
+                        <h3>900</h3>
+                        <div class="section-fact-line"></div>
+                        <h4>Photos</h4>
+                        <p>Morbi ex felis, tincidunt sed hendrerit</p>
+                    </div>
+                    <div class="section-fact">
+                        <h3>500</h3>
+                        <div class="section-fact-line"></div>
+                        <h4>Marketing Ideas</h4>
+                        <p>Donec tincidunt cursus</p>
+                    </div>
+                    <div class="section-fact">
+                        <h3>100</h3>
+                        <div class="section-fact-line"></div>
+                        <h4>Exhibitions</h4>
+                        <p>Morbi ex felis, tincidunt sed</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-share">
+            <div class="section-share--legend">
+                <img src="Assest/imagens/share.png" />
+                Tell About Us:
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon twitter">
+                    <img src="Assest/imagens/twitter.png" />
+                </div>
+                152
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon linkedin">
+                    <img src="Assest/imagens/linkedin.png" />
+                </div>
+                152
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon facebook">
+                    <img src="Assest/imagens/facebook.png" />
+                </div>
+                152
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon googleplus">
+                    <img src="Assest/imagens/googleplus.png" />
+                </div>
+                152
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon pinterest">
+                    <img src="Assest/imagens/pinterest.png" />
+                </div>
+                152
+            </div>
+        </section>
+        <section class="default light">
+            <div class="section-title">Contact Us</div>
+            <div class="section-desc">Our Agency Located in Melbourne, Australia</div>
+            <div class="section-body">
+                <div class="section-contact">
+                    <form method="POST">
+                        <div class="section-contact--split">
+                            <input type="text" name="name" placeholder="NAME" />
+                            <input type="text" name="name" placeholder="EMAIL" />
+                        </div>
+                        <input type="text" name="name" placeholder="SUBJECT" />
+                        <textarea name="message" placeholder="MESSAGE"></textarea>
+                        <a class="button" href="#">Send Message</a>
+                    </form>
+                </div>
+            </div>
+        </section>
+    
     </main>
     <footer>
 
