penultimo commit finalizacao para desktop

--- a/index.html
+++ b/index.html
@@ -572,10 +572,81 @@
                 </div>
             </div>
         </section>
-    
+        <section class="section-map">
+            <div class="section-map--area">
+                <div class="section-map--info">
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="Assest/imagens/carta.png"/>
+                        </div>                        
+                        mabezerra2@gmail.com
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="Assest/imagens/localizacao.png"/>
+                        </div>                        
+                        Endereco completao que vai ter alguma coisa
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="Assest/imagens/telefone.png"/>
+                        </div>                        
+                        (67)99195-0527
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="Assest/imagens/arroba.png"/>
+                        </div>                        
+                        mabezerra2@gmail.com
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="Assest/imagens/web.png"/>
+                        </div>                        
+                        Endereco completao que vai ter alguma coisa
+                    </div>
+                </div>
+            </div>    
+        </section>
     </main>
     <footer>
-
+        <div class="footer-area">
+            <div class="footer-social">
+                <div class="footer-item-img">
+                    <img src="Assest/imagens/twitter.png"/>
+                </div>
+                <div class="footer-item-img">
+                    <img src="Assest/imagens/web.png"/>
+                </div>
+                <div class="footer-item-img">
+                    <img src="Assest/imagens/linkedin.png"/>
+                </div>
+                <div class="footer-item-img">
+                    <img src="Assest/imagens/facebook.png"/>
+                </div>
+                <div class="footer-item-img">
+                    <img src="Assest/imagens/googleplus.png"/>
+                </div>
+                <div class="footer-item-img">
+                    <img src="Assest/imagens/arroba.png"/>
+                </div>
+            </div>
+            <div class="footer-desc">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dignissim placerat mauris in finibus. Vivamus velit eros, dapibus at pharetra nec, posuere quis nisi. Sed tincidunt porta lacus, vel aliquam nisl laoreet non. Pellentesque in dictum neque. Nullam quis luctus enim, id porttitor massa. Donec dignissim eleifend finibus. Etiam porta ante sit amet pellentesque consectetur. Phasellus sed quam ut mi ultrices dictum faucibus ac justo. Aenean rutrum, ante et aliquet feugiat, elit tellus pulvinar mauris, venenatis iaculis nunc est non leo.</p>
+            </div>
+            <div class="footer-contact">
+                <form method="post" >
+                    <div class="footer-contact-email">
+                        <input type="email" placeholder="email to subscribe" name="email"/>
+                    </div>
+                        <a class=button>SUBSCRIBE</a>
+                </form>
+            </div>
+        </div>
+        <div class="footer_copy">
+            <p>Criado por Matheus Bezerra</p>
+            <p>Todos os direitos a Away</p>
+        </div>
     </footer>
     
 </body>
