tudo terminado faltando o JS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Assest/Css/estilo.css">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1"/>
     <title>Away</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
                 <div class="logoimg"></div>                              
             </div>
             <div class="menu">
+                <img class="menu-opener" src="Assest/imagens/menu.png"/>
                 <nav>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
