tudo teminado falta js

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                     <div class="footer-contact-email">
                         <input type="email" placeholder="email to subscribe" name="email"/>
                     </div>
-                        <a class=button>SUBSCRIBE</a>
+                        <a href="#" class=button>SUBSCRIBE</a>
                 </form>
             </div>
         </div>
